# repo-onboarding-agent

./: .env.example  .gitignore  agent.py  analysis_output.json  final_documentation.json  llm_inputs.json  output.json  output.toon  readme.md  requirements.txt  test.json
.devcontainer/: devcontainer.json
SystemPrompts/: SystemPromptClassHelperLLM.txt  SystemPromptDiagramLLM.py  SystemPromptEvaluatorHelper.txt  SystemPromptEvaluatorLLM.txt  SystemPromptFunctionHelperLLM.txt  SystemPromptHelperLLM.txt  SystemPromptMainLLM.txt  SystemPromptMainLLMToon.txt  SystemPromptNotebookLLM.txt
backend/: .env.example  .gitignore  AST.py  AST_Schema.py  DiagramLLM.py  EvaluatorLLM.py  File_Dependency.py  HelperLLM.py  HelperLLM_evaluation.py  MainLLM.py  MainLLM_evaluation.py  agent.py  basic_info.py  callgraph.py  converter.py  evaluation.py  getRepo.py  main.py  pyproject.toml  relationship_analyzer.py  scads_key_test.py  tool.py  tools.py
backend/diagram_generation/: __init__.py  call_resolver.py  callgraph.py  data_types.py  emitter.py  generator.py  main.py  symbol_collector.py
backend/src/: __init__.py  api.py  main.py
backend/src/framework/: __init__.py
backend/src/framework/api/: router.py
database/: db.py
evaluation/: evaluation_stats-08-12-2025-14-49-15.json
frontend/: Frontend.py  example.md  frontend.py
notizen/: 12_20_00.md  Report Agenda.txt  Zwischenpraesentation Agenda.txt  doc_bestandteile.md  graph_15_12_10_54.md  notizen.md  paul_notizen.md  praesentation_notizen.md  technische_notizen.md
result/: EVALUATION_12_12_2025_12-00-49.md  (+47 more)
(+529 files in other folders)
